Chapter05/.metadata/.plugins/org.eclipse.cdt.ui/Exersise12.build.log
12:24:45 **** Incremental Build of configuration Debug for project Exersise12 ****
make all 
Building file: ../src/main.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function 'int main()':
../src/main.cpp:8:31: error: in C++98 'answer' must be initialized by constructor, not by '{...}'
  vector<int> answer = {3,6,8,3};
                               ^
../src/main.cpp:8:31: error: could not convert '{3, 6, 8, 3}' from '<brace-enclosed initializer list>' to 'std::vector<int>'
make: *** [src/subdir.mk:20: src/main.o] Error 1

12:24:47 Build Finished (took 1s.816ms)

